--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,5 +1,8 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+}
+body {
     background-color: #1e1e1e;
 }
 .topo {
@@ -26,7 +29,7 @@ body {
     width: 100%;
     max-width: 980px;
     margin: auto;
-    background-color: #eee;
+    background-color: #fff;
     min-height: 400px;
 }
 .rodape {
@@ -37,3 +40,65 @@ body {
     background-color: #303030;
     margin-bottom: 50px;
 }
+.menu ul {
+    list-style: none;
+}
+.menu li {
+    height: 50px;
+    line-height: 50px;
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #fff;
+}
+.home_sobre {
+    padding-top: 20px;
+    padding-right: 20px;
+}
+.home_sobre img {
+    float: left;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+.home_portfolio {
+    clear: both;
+    padding: 20px;
+}
+.portfolio_item {
+    width: 200px;
+    height: 150px;
+    float: left;
+    border: 3px solid #e2e8ee;
+    margin: 10px;
+}
+.portfolio, .sobre, .servicos, .contato {
+    padding-top: 20px;
+}
+
+.portfolio h1, .sobre h1, .servicos h1, .contato h1 {
+    margin: 0 0 10px 10px;
+}
+
+.sobre, .servicos, .contato {
+    padding-bottom: 20px;
+}
+.sobre p, .servicos p {
+    margin: 0 10px 0 10px;
+}
+.contato form {
+    margin-left: 10px;
+}
+.contato input, .contato textarea {
+    width: 400px;
+    height: 30px;
+    border: 1px solid #000;
+    border-radius: 5px;
+}
+.contato textarea {
+    height: 150px;
+}
+.contato .aviso {
+    color: #006400;
+    margin-left: 10px;
+}
+
